samples/_failures_safe/1761492436_5d44e0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_99747e3f.c: In function ‘main’:
./samples/SAFE/__tmp_99747e3f.c:152:17: error: expected declaration or statement at end of input
  152 |                 } else if (status == -1) {
      |                 ^
./samples/SAFE/__tmp_99747e3f.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_99747e3f.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_99747e3f.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_99747e3f.c:152:17: error: expected declaration or statement at end of input
